# server/docs/swagger.json
@@ -928,6 +928,41 @@
                 }
             }
         },
+        "/attendant/getUserAttendant": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Attendant"
+                ],
+                "summary": "获取用户某日考勤时间",
+                "parameters": [
+                    {
+                        "description": "ID",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UserAttendantQuery"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{},\"msg\":\"修改成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/authority/copyAuthority": {
             "post": {
                 "security": [
@@ -4642,6 +4677,23 @@
                 }
             }
         },
+        "config.MinioOSS": {
+            "type": "object",
+            "properties": {
+                "accessKeyId": {
+                    "type": "string"
+                },
+                "accessKeySecret": {
+                    "type": "string"
+                },
+                "bucketName": {
+                    "type": "string"
+                },
+                "endpoint": {
+                    "type": "string"
+                }
+            }
+        },
         "config.Mysql": {
             "type": "object",
             "properties": {
@@ -4823,6 +4875,9 @@
                 "local": {
                     "description": "oss",
                     "$ref": "#/definitions/config.Local"
+                },
+                "minioOSS": {
+                    "$ref": "#/definitions/config.MinioOSS"
                 },
                 "mysql": {
                     "description": "gorm",
@@ -5417,6 +5472,17 @@
                 }
             }
         },
+        "request.UserAttendantQuery": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                }
+            }
+        },
         "response.Email": {
             "type": "object",
             "properties": {
@@ -5931,6 +5997,13 @@
                 "nickName": {
                     "description": "用户昵称",
                     "type": "string"
+                },
+                "originCode": {
+                    "type": "string"
+                },
+                "originType": {
+                    "description": "1 内部  2 考勤 3 erp",
+                    "type": "integer"
                 },
                 "position": {
                     "$ref": "#/definitions/autocode.AutoPosition"
