# server/initialize/router.go
@@ -41,6 +41,7 @@ func Routers() *gin.Engine {
 	systemRouter := router.RouterGroupApp.System
 	exampleRouter := router.RouterGroupApp.Example
 	autocodeRouter := router.RouterGroupApp.Autocode
+	attendantRouter := router.RouterGroupApp.Attendant
 	PublicGroup := Router.Group("")
 	{
 		// 健康监测
@@ -51,6 +52,7 @@ func Routers() *gin.Engine {
 	{
 		systemRouter.InitBaseRouter(PublicGroup) // 注册基础功能路由 不做鉴权
 		systemRouter.InitInitRouter(PublicGroup) // 自动初始化相关
+		attendantRouter.InitAutoPositionRouter(PublicGroup) // 注册考勤相关
 	}
 	PrivateGroup := Router.Group("")
 	PrivateGroup.Use(middleware.JWTAuth()).Use(middleware.CasbinHandler())
