# server/router/attendant/enter.go
@@ -1,0 +1,5 @@
+package attendant
+
+type RouterGroup struct {
+	AttendantRouter
+}
